ran make ready-pr

--- a/config/crds/resources/apiextensions.k8s.io_v1_customresourcedefinition_networkserviceslbrouteextensions.networkservices.cnrm.cloud.google.com.yaml
+++ b/config/crds/resources/apiextensions.k8s.io_v1_customresourcedefinition_networkserviceslbrouteextensions.networkservices.cnrm.cloud.google.com.yaml
@@ -86,24 +86,22 @@ spec:
                           authority:
                             description: |-
                               Optional. The `:authority` header in the gRPC request sent from Envoy
-                               to the extension service.
-                               Required for Callout extensions.
+                              to the extension service.
+                              Required for Callout extensions.
 
-                               This field is not supported for plugin extensions. Setting it results in
-                               a validation error.
+                              This field is not supported for plugin extensions. Setting it results in
+                              a validation error.
                             type: string
                           backendServiceRef:
                             description: |-
                               Optional. The reference to the service that runs the extension.
 
-                               To configure a callout extension, `service` must be a fully-qualified
-                               reference
-                               to a [backend
-                               service](https://cloud.google.com/compute/docs/reference/rest/v1/backendServices)
-                               in the format:
-                               `https://www.googleapis.com/compute/v1/projects/{project}/regions/{region}/backendServices/{backendService}`
-                               or
-                               `https://www.googleapis.com/compute/v1/projects/{project}/global/backendServices/{backendService}`.
+                              To configure a callout extension, `service` must be a fully-qualified reference
+                              to a [backend service](https://cloud.google.com/compute/docs/reference/rest/v1/backendServices)
+                              in the format:
+                              `https://www.googleapis.com/compute/v1/projects/{project}/regions/{region}/backendServices/{backendService}`
+                              or
+                              `https://www.googleapis.com/compute/v1/projects/{project}/global/backendServices/{backendService}`.
                             oneOf:
                             - not:
                                 required:
@@ -134,19 +132,19 @@ spec:
                           failOpen:
                             description: |-
                               Optional. Determines how the proxy behaves if the call to the extension
-                               fails or times out.
+                              fails or times out.
 
-                               When set to `TRUE`, request or response processing continues without
-                               error. Any subsequent extensions in the extension chain are also
-                               executed. When set to `FALSE` or the default setting of `FALSE` is used,
-                               one of the following happens:
+                              When set to `TRUE`, request or response processing continues without
+                              error. Any subsequent extensions in the extension chain are also
+                              executed. When set to `FALSE` or the default setting of `FALSE` is used,
+                              one of the following happens:
 
-                               * If response headers have not been delivered to the downstream client,
-                               a generic 500 error is returned to the client. The error response can be
-                               tailored by configuring a custom error response in the load balancer.
+                              * If response headers have not been delivered to the downstream client,
+                              a generic 500 error is returned to the client. The error response can be
+                              tailored by configuring a custom error response in the load balancer.
 
-                               * If response headers have been delivered, then the HTTP stream to the
-                               downstream client is reset.
+                              * If response headers have been delivered, then the HTTP stream to the
+                              downstream client is reset.
                             type: boolean
                           forwardHeaders:
                             description: Optional. List of the HTTP headers to forward
@@ -159,33 +157,33 @@ spec:
                           metadata:
                             description: |-
                               Optional. The metadata provided here is included as part of the
-                               `metadata_context` (of type `google.protobuf.Struct`) in the
-                               `ProcessingRequest` message sent to the extension server.
+                              `metadata_context` (of type `google.protobuf.Struct`) in the
+                              `ProcessingRequest` message sent to the extension server.
 
-                               The metadata is available under the namespace
-                               `com.google.<extension_type>.<resource_name>.<extension_chain_name>.<extension_name>`.
-                               For example:
-                               `com.google.lb_traffic_extension.lbtrafficextension1.chain1.ext1`.
+                              The metadata is available under the namespace
+                              `com.google.<extension_type>.<resource_name>.<extension_chain_name>.<extension_name>`.
+                              For example:
+                              `com.google.lb_traffic_extension.lbtrafficextension1.chain1.ext1`.
 
-                               The following variables are supported in the metadata:
+                              The following variables are supported in the metadata:
 
-                               `{forwarding_rule_id}` - substituted with the forwarding rule's fully
-                                 qualified resource name.
+                              `{forwarding_rule_id}` - substituted with the forwarding rule's fully
+                              qualified resource name.
 
-                               This field must not be set for plugin extensions. Setting it results in
-                               a validation error.
+                              This field must not be set for plugin extensions. Setting it results in
+                              a validation error.
 
-                               You can set metadata at either the resource level or the extension level.
-                               The extension level metadata is recommended because you can pass a
-                               different set of metadata through each extension to the backend.
+                              You can set metadata at either the resource level or the extension level.
+                              The extension level metadata is recommended because you can pass a
+                              different set of metadata through each extension to the backend.
 
-                               This field is subject to following limitations:
+                              This field is subject to following limitations:
 
-                               * The total size of the metadata must be less than 1KiB.
-                               * The total number of keys in the metadata must be less than 16.
-                               * The length of each key must be less than 64 characters.
-                               * The length of each value must be less than 1024 characters.
-                               * All values must be strings.
+                              * The total size of the metadata must be less than 1KiB.
+                              * The total number of keys in the metadata must be less than 16.
+                              * The length of each key must be less than 64 characters.
+                              * The length of each value must be less than 1024 characters.
+                              * All values must be strings.
                             x-kubernetes-preserve-unknown-fields: true
                           name:
                             description: Required. The name for this extension. The
@@ -198,42 +196,43 @@ spec:
                           supportedEvents:
                             description: |-
                               Optional. A set of events during request or response processing for which
-                               this extension is called.
+                              this extension is called.
 
-                               For the `LBTrafficExtension` resource, this field is required.
+                              For the `LBTrafficExtension` resource, this field is required.
 
-                               For the `LBRouteExtension` resource, this field is optional. If
-                               unspecified, `REQUEST_HEADERS` event is assumed as supported.
+                              For the `LBRouteExtension` resource, this field is optional. If
+                              unspecified, `REQUEST_HEADERS` event is assumed as supported.
 
-                               For the `LBEdgeExtension` resource, this field is required and must only
-                               contain `REQUEST_HEADERS` event.
+                              For the `LBEdgeExtension` resource, this field is required and must only
+                              contain `REQUEST_HEADERS` event.
                             items:
                               type: string
                             type: array
                           timeout:
                             description: |-
                               Optional. Specifies the timeout for each individual message on the
-                               stream. The timeout must be between `10`-`10000` milliseconds. Required
-                               for callout extensions.
+                              stream. The timeout must be between `10`-`10000` milliseconds. Required
+                              for callout extensions.
 
-                               This field is not supported for plugin extensions. Setting it results in
-                               a validation error.
+                              This field is not supported for plugin extensions. Setting it results in
+                              a validation error.
                             type: string
                           wasmPluginRef:
                             description: |-
                               Optional. The reference to the WasmPlugin resource.
 
-                               To configure a plugin extension, `service` must be a reference
-                               to a [`WasmPlugin`
-                               resource](https://cloud.google.com/service-extensions/docs/reference/rest/v1beta1/projects.locations.wasmPlugins)
-                               in the format:
-                               `projects/{project}/locations/{location}/wasmPlugins/{plugin}`
-                               or
-                               `//networkservices.googleapis.com/projects/{project}/locations/{location}/wasmPlugins/{wasmPlugin}`.
+                              To configure a plugin extension, `service` must be a reference to a
+                              [`WasmPlugin` resource](https://cloud.google.com/service-extensions/docs/reference/rest/v1beta1/projects.locations.wasmPlugins)
+                              in the format:
+                              `projects/{project}/locations/{location}/wasmPlugins/{plugin}`
+                              or
+                              `//networkservices.googleapis.com/projects/{project}/locations/{location}/wasmPlugins/{wasmPlugin}`.
 
-                               Plugin extensions are currently supported for the
-                               `LBTrafficExtension`, the `LBRouteExtension`, and the `LBEdgeExtension`
-                               resources.
+                              Plugin extensions are currently supported for the `LBTrafficExtension`, the
+                              `LBRouteExtension`, and the `LBEdgeExtension` resources.
+
+                              Note: Only the `external` subfield is supported as the
+                              `NetworkServicesWasmPlugin` resource is not yet supported in Config Connector.
                             oneOf:
                             - not:
                                 required:
@@ -277,10 +276,10 @@ spec:
                         celExpression:
                           description: |-
                             Required. A Common Expression Language (CEL) expression that is used to
-                             match requests for which the extension chain is executed.
+                            match requests for which the extension chain is executed.
 
-                             For more information, see [CEL matcher language
-                             reference](https://cloud.google.com/service-extensions/docs/cel-matcher-language-reference).
+                            For more information, see [CEL matcher language
+                            reference](https://cloud.google.com/service-extensions/docs/cel-matcher-language-reference).
                           type: string
                       required:
                       - celExpression
