--- a/pkg/test/resourcefixture/testdata/basic/sql/v1beta1/sqlinstance/sqlinstance-postgres-replication/_generated_object_sqlinstance-postgres-replication.golden.yaml
+++ b/pkg/test/resourcefixture/testdata/basic/sql/v1beta1/sqlinstance/sqlinstance-postgres-replication/_generated_object_sqlinstance-postgres-replication.golden.yaml
@@ -3,6 +3,7 @@ kind: SQLInstance
 metadata:
   annotations:
     cnrm.cloud.google.com/deletion-policy: abandon
+    cnrm.cloud.google.com/last-changed-cookie: normalized-cookie
     cnrm.cloud.google.com/project-id: ${projectId}
     cnrm.cloud.google.com/unmanaged: spec.maintenanceVersion,spec.settings.edition
   finalizers:
