--- a/pkg/test/resourcefixture/testdata/basic/sql/v1beta1/sqlinstance/sqlinstance-postgres-replication/update.yaml
+++ b/pkg/test/resourcefixture/testdata/basic/sql/v1beta1/sqlinstance/sqlinstance-postgres-replication/update.yaml
@@ -41,6 +41,7 @@ spec:
       queryInsightsEnabled: true
       queryStringLength: 2048
     ipConfiguration:
+      # enablePrivatePathForGoogleCloudServices: true # field is unset now!
       ipv4Enabled: false
       privateNetworkRef:
         name: network-${uniqueId}
